# learn-ai-tools

./: .gitignore  README.md  pyproject.toml  report.md
crawl4ai/: get-landingPage-products.py  minimun.py  response.json  steamtoy-cleaned-html.html  steamtoy.md
crewai/src/fellowshipofthering/: crew.py
src/fellowshipofthering/: main.py
