[project]
name = "fellowshipofthering"
version = "0.1.0"
description = "fellowshipOfTheRing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
fellowshipofthering = "fellowshipofthering.main:run"
run_crew = "fellowshipofthering.main:run"
train = "fellowshipofthering.main:train"
replay = "fellowshipofthering.main:replay"
test = "fellowshipofthering.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
